tests/paczka1/fuzzy1/21750529.err
Error in line 3: A519 A519 42,6
Error in line 1: cfD09E A519 91,8
Error in line 8: cfD09E S747 81,6
Error in line 23: A519 A519 5,8
